增加一个.log on 空的错误返回